--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-.DS_Store
+*.DS_Store
+*.pax
+*-blx.bib
+*.aux
+*.bcf
+*.bbl
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.run.xml
+*.synctex*
+*.blg
+*.auxlock
+*.lox
+*.toc
+*.axp
+*SAVE-ERROR*
+*.yaml
+*.vrb
